# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python.yml
brain_games/: cli.py  game_engine.py  play_game.py  question.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
