[tool.poetry]
name = "hexlet-code"
version = "0.01"
description = "hexlet-code"
authors = ["Gorodecki <anton@nekrasov.tech>"]
packages= [
	{include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain_games = "brain_games.scripts.brain_games:main"
brain_even = "brain_games.scripts.brain_even:main"
brain_calc = "brain_games.scripts.brain_calc:main"
brain_gcd = "brain_games.scripts.brain_gcd:main"
